--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,10 @@
     },
     "require": {
         "php": ">=7.4",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5",
-        "symfony/yaml": "^5.1"
+        "symfony/yaml": "^5.1",
+        "psr/log": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
