--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,11 @@
         "php": ">=7.4",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5",
-        "symfony/yaml": "^5.1",
+        "symfony/yaml": "^4",
         "psr/log": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9"
+        "phpunit/phpunit": "^9",
+        "codeclimate/php-test-reporter": "^0.4.4"
     }
 }
